<?xml version="1.0" encoding="utf-8"?>
<!--
XPerience Kernel Tweaker - An Android CPU Control application
Copyright (C) 2011-2015 Carlos "Klozz" Jesus <TeamMEX@XDA-Developers>

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <PreferenceCategory
        android:key="so_min_max"
        android:title="@string/so_min_max">

        <ListPreference
            android:dialogTitle="@string/pt_so_max"
            android:key="pref_so_max"
            android:persistent="true"
            android:title="@string/pt_so_max"/>
        <ListPreference
            android:dialogTitle="@string/pt_so_min"
            android:key="pref_so_min"
            android:persistent="true"
            android:title="@string/pt_so_min"/>
        <SwitchPreference
            android:defaultValue="false"
            android:key="so_minmax_boot"
            android:summary="@string/ps_blx_boot"
            android:title="@string/sob"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="oc_live"
        android:title="@string/liveoc">
        <Preference
            android:key="pref_oc_val"
            android:title="@string/oc_value"/>
        <ListPreference
            android:dialogTitle="@string/oc_target_low"
            android:key="pref_oc_low"
            android:persistent="true"
            android:title="@string/oc_target_low"/>
        <ListPreference
            android:dialogTitle="@string/oc_target_high"
            android:key="pref_oc_high"
            android:persistent="true"
            android:title="@string/oc_target_high"/>
        <SwitchPreference
            android:defaultValue="false"
            android:key="oc_live_boot"
            android:summary="@string/ps_blx_boot"
            android:title="@string/sob"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="mpdecision"
        android:title="@string/mpdecision">
        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_mpdecision"
            android:title="@string/pt_mpdecision"/>
        <SwitchPreference
            android:defaultValue="false"
            android:key="mpdecision_boot"
            android:summary="@string/ps_dsync"
            android:title="@string/sob"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="msmhotplug"
        android:title="@string/msmhotplug">
        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_msmhotplug"
            android:summary="@string/ps_dsync"
            android:title="@string/pt_msmhotplug"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="hp"
        android:title="@string/pt_hp">
        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_hp"
            android:summary="@string/ps_hp"
            android:title="@string/pt_hp"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="hotplugset"
        android:title="@string/pt_hotplug">
        <Preference
            android:key="pref_hotplug"
            android:title="@string/pt_hotplug"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="cpuq"
        android:title="@string/pt_cpuquiet">
        <ListPreference
            android:dialogTitle="@string/pt_cpuquiet"
            android:key="pref_cpuquiet"
            android:persistent="true"
            android:title="@string/pt_cpuquiet"/>
        <SwitchPreference
            android:defaultValue="false"
            android:key="cpuq_boot"
            android:summary="@string/ps_restore_boot"
            android:title="@string/sob"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="intelliplug"
        android:title="@string/intelliplug">
        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_intelliplug"
            android:summary="@string/ps_dsync"
            android:title="@string/pt_intelliplug"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="intelli_prof"
        android:title="@string/int_prof">
        <ListPreference
            android:dialogTitle="@string/int_prof"
            android:key="pref_intelliprof"
            android:persistent="true"
            android:title="@string/int_prof"
            android:summary="intelli_plugprof_sum"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="ecomode"
        android:title="@string/ecomode">
        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_ecomode"
            android:summary="@string/ps_dsync"
            android:title="@string/pt_ecomode"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="mc_ps"
        android:title="@string/prefcat_mc_ps">
        <ListPreference
            android:dialogTitle="@string/pt_mc_ps"
            android:key="pref_mcps"
            android:persistent="true"
            android:title="@string/pt_mc_ps"/>
        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_mc_ps"
            android:summary="@string/ps_blx_boot"
            android:title="@string/sob"/>
    </PreferenceCategory>
    <!-- -GPU- -->
    <PreferenceCategory
        android:key="gpu_max_clk"
        android:title="@string/pt_gpu_fmax">
        <ListPreference
            android:dialogTitle="@string/pt_gpu_fmax"
            android:key="pref_gpu_fmax"
            android:persistent="true"
            android:title="@string/pt_gpu_fmax"/>
        <SwitchPreference
            android:defaultValue="false"
            android:key="gpu_fmax_boot"
            android:summary="@string/ps_blx_boot"
            android:title="@string/sob"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="gpugovset"
        android:title="@string/pt_gpugov_set">
        <Preference
            android:key="pref_gpugov_set"
            android:title="@string/pt_gpugov_set"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="uv_krait"
        android:title="@string/krait">
        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_krait_boost"
            android:summary="@string/ps_krait_boost"
            android:title="@string/pt_krait_boost"/>
        <ListPreference
            android:dialogTitle="@string/pt_krait_thres"
            android:key="pref_krait_thres"
            android:persistent="true"
            android:title="@string/pt_krait_thres"/>
        <Preference
            android:key="pref_krait_lo"
            android:summary="@string/ps_krait_lo"
            android:title="@string/pt_krait_lo"/>
        <Preference
            android:key="pref_krait_hi"
            android:summary="@string/ps_krait_hi"
            android:title="@string/pt_krait_hi"/>
        <SwitchPreference
            android:defaultValue="false"
            android:key="krait_uv_boot"
            android:summary="@string/ps_restore_boot"
            android:title="@string/sob"/>
    </PreferenceCategory>
</PreferenceScreen>
