<?xml version="1.0" encoding="utf-8"?>
<!--
Kernel Tweaker - An Android CPU Control application
Copyright (C) 2011-2015  Carlos "Klozz" Jesús <TeamMEX@XDA-Developers>

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!--XPERIENCE HEADER-->
    <PreferenceScreen android:key="xpe_logo"
        android:layout="@layout/logo_xpe"/>

    <Preference
        android:key="licensia"
        android:title="KernelTweaker3"
        android:summary="Tap to See the licence" />

    <Preference android:key="version_info"/>

    <Preference android:key="pref_donate"
        android:summary="@string/paypal"
        android:title="@string/donor"/>

    <Preference
        android:key="visible_tabs"
        android:title="@string/show_tabs"/>

    <SwitchPreference
        android:key="boot_mode"
        android:summary=""
        android:title="@string/initd"/>

    <Preference
        android:key="int_sd"
        android:title="@string/pt_int_sd"/>

    <Preference
        android:key="ext_sd"
        android:title="@string/pt_ext_sd"/>

    <Preference
        android:key="br_op"
        android:summary="@string/bkup_info"
        android:title="@string/backup_restore"/>

    <SwitchPreference
        android:key="use_light_theme"
        android:summary="@string/ps_use_light_theme"
        android:title="@string/pt_use_light_theme"/>

    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:defaultValue="#ff000000"
        android:key="widget_bg_color"
        android:title="@string/widget_bg_color"/>
    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:defaultValue="#ff808080"
        android:key="widget_text_color"
        android:title="@string/widget_text_color"/>

</PreferenceScreen>