<?xml version="1.0" encoding="utf-8"?>
<!--
XPerience Kernel Tweaker - An Android CPU Control application
Copyright (C) 2011-2015 Carlos "Klozz" Jesus <TeamMEX@XDA-Developers>

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/search_prop"
        android:showAsAction="never"
        android:title="@string/filter"/>
    <item
        android:id="@+id/restore_prop"
        android:showAsAction="never"
        android:title="@string/mt_reset"/>
    <item
        android:id="@+id/new_prop"
        android:showAsAction="never"
        android:title="@string/add_prop_title"/>
</menu>