<?xml version="1.0" encoding="utf-8"?>
<!--
XPerience Kernel Tweaker - An Android CPU Control application
Copyright (C) 2011-2015 Carlos "Klozz" Jesus <TeamMEX@XDA-Developers>

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="fill_parent">

<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:layout_alignParentStart="false"
    android:layout_alignParentTop="true"
    android:layout_above="@+id/sob">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dip">



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
        android:padding="4dp">

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toucht1"
            android:id="@+id/switch1" />

    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
        android:padding="4dp">

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toucht2"
            android:id="@+id/switch2" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
        android:padding="4dp"
        android:paddingTop="0dp">

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toucht21"
            android:id="@+id/switch21" />

    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
        android:padding="4dp">

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toucht3"
            android:id="@+id/switch3" />

    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
        android:padding="4dp">
        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toucht4"
            android:id="@+id/switch4" />
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
        android:padding="4dp">
        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toucht5"
            android:id="@+id/switch5" />

    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
        android:padding="4dp">
        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toucht6"
            android:id="@+id/switch6" />
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
        android:padding="4dp">
        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toucht10"
            android:id="@+id/switch10" />
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
        android:padding="4dp">
        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toucht7"
            android:id="@+id/switch7" />
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
        android:padding="4dp">
        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toucht8"
            android:id="@+id/switch8" />
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
        android:padding="4dp">
        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toucht9"
            android:id="@+id/switch9" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/f2s"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toucht9s"
            android:textSize="16sp"
            android:id="@+id/f2stxt"
            android:layout_marginEnd="10dip"
            android:layout_toStartOf="@+id/spinsens"
            android:layout_alignParentStart="true" />

        <Spinner
            android:layout_width="120dip"
            android:layout_height="wrap_content"
            android:id="@+id/spinsens"
            android:layout_gravity="center_vertical|end"
            android:entries="@array/asens"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"/>
</LinearLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="true"
        android:id="@+id/sob"
        android:padding="20dip"
        android:gravity="center_vertical|center_horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sob"
            android:textSize="14sp"
            android:paddingBottom="4dip"
            android:paddingStart="4dip"
            android:layout_marginEnd="10dip" />

        <Switch
            android:id="@+id/swboot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>